# ALVR

./: .gitmodules  Cargo.toml
.github/workflows/: prepare-alxr-release.yml  prepare-release.yml  prepare-server-release.yml  rust.yml
alvr/audio/: Cargo.toml
alvr/client/: Cargo.toml
alvr/client/android/ALVR-common/reedsolomon/: rs.c  rs.h
alvr/client/android/app/src/main/cpp/: bindings.h  fec.cpp  fec.h
alvr/commands/: Cargo.toml
alvr/common/: Cargo.toml
alvr/common/src/: lib.rs  logging.rs
alvr/filesystem/: Cargo.toml
alvr/launcher/: Cargo.toml
alvr/launcher/src/: commands.rs
alvr/openxr-client/alxr-android-client/: Cargo.toml
alvr/openxr-client/alxr-android-client/lynx/: Cargo.toml
alvr/openxr-client/alxr-android-client/pico/: Cargo.toml
alvr/openxr-client/alxr-android-client/pico-neo/: Cargo.toml
alvr/openxr-client/alxr-android-client/pico-v4/: Cargo.toml
alvr/openxr-client/alxr-android-client/quest/: Cargo.toml
alvr/openxr-client/alxr-android-client/src/: lib.rs  permissions.rs  wifi_manager.rs
alvr/openxr-client/alxr-client/: Cargo.toml
alvr/openxr-client/alxr-client/src/: main.rs
alvr/openxr-client/alxr-client/uwp/: Cargo.toml  alxr_client_TemporaryKey.pfx  build_app_bundle.bat  build_app_package.bat  cargo_build_uwp.bat
alvr/openxr-client/alxr-common/: Cargo.toml
alvr/openxr-client/alxr-common/src/: connection.rs  lib.rs
alvr/openxr-client/alxr-engine-sys/: Cargo.toml  build.rs  build_libalxr.bat
alvr/openxr-client/alxr-engine-sys/android/: build.gradle  settings.gradle
alvr/openxr-client/alxr-engine-sys/android/app/: build.gradle
alvr/openxr-client/alxr-engine-sys/android/app/src/main/: AndroidManifest.xml
alvr/openxr-client/alxr-engine-sys/android/app/src/main/res/values/: themes.xml
alvr/openxr-client/alxr-engine-sys/android/app/src/main/res/values-night/: themes.xml
alvr/openxr-client/alxr-engine-sys/android/gradle/wrapper/: gradle-wrapper.properties
alvr/openxr-client/alxr-engine-sys/src/: lib.rs
alvr/server/: Cargo.toml  build.rs
alvr/server/src/: connection.rs  graphics_info.rs
alvr/session/: Cargo.toml
alvr/session/src/: settings.rs
alvr/sockets/: Cargo.toml
alvr/sockets/src/stream_socket/: mod.rs  tcp.rs  throttled_udp.rs  udp.rs
alvr/vrcompositor-wrapper/: Cargo.toml
alvr/vulkan-layer/: Cargo.toml
alvr/xtask/: Cargo.toml
alvr/xtask/src/: dependencies.rs  main.rs
packaging/deb/: control
packaging/rpm/: alvr.spec
