[package]
name = "alxr-engine-sys"
version = "0.12.0"
authors = ["korejan <64199710+korejan@users.noreply.github.com>"]
edition = "2021"
links = "alxr_engine"

[features]
# These are only used for android builds.
generic-flavor = [] # default if none specified.
quest-flavor = []
pico-flavor = []
pico-v4-flavor = []
# These features are only for non-android builds.
cuda-interop = []
bundled-ffmpeg = []
oculus-ext-headers = []
# These are for all build types.
no-decoder =  [] # disables building platform decoders & depeendencies.

[build-dependencies]
cmake = "0.1"
bindgen = "0.66"
cc = { version = "1", features = ["parallel"] }
walkdir = "2"
target-lexicon = "0.12"
